# pdfflow

./: .gitignore  .pylintrc  README.md  README.txt  args.py  pdfflow.py  plot_utils.py  plots.py  setup.cfg  setup.py  subgrid.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pytest.yml  pythonpublish.yml  test_many_pdfs.yml
benchmarks/: compare_accuracy_alphaS.py  compare_accuracy_alphas.py  compare_accuracy_lhapdf.py  compare_performance.py  compare_performance_lhapdf.py  plot_utils.py  singletop_lo.py  test_performance_intel.py  vfh.py
benchmarks/nlo_integration/: main_vfh.py  me.py  parameters.py  phase_space.py  spinors.py
benchmarks_and_tests/: check_many_pdfs.py  singletop_lo.py
capi/: CMakeLists.txt  README.md
capi/examples/: Makefile  example.c
capi/examples/fortran/: Makefile  example.f90  pdfflow_f_interface.c
capi/src/: build.py  pdfflow.pc.in  wrapper.py
capi/src/pdfflow/: pdfflow.h
doc/source/: conf.py  how_to.rst  index.rst  overview.rst
doc/source/apisrc/: pdfflow.rst
src/: test_mkl_dnn.sh
src/pdfflow/: __init__.py  alphaS_functions.py  alphaS_interpolations.py  alphaS_region_interpolator.py  alphaS_subgrid.py  alphas_functions.py  alphas_interpolations.py  alphas_region_interpolator.py  alphas_subgrid.py  configflow.py  functions.py  interpolations.py  neighbour_knots.py  pflow.py  region_interpolator.py  selection.py  subgrid.py
src/pdfflow/tests/: test_alphas.py  test_config.py  test_lhapdf.py  test_pflow.py
