[metadata]
name = pdfflow
description = PDF interpolation with Tensorflow
author = S.Carrazza, J.Cruz-Martinez, M.Rossi
author_email = stefano.carrazza@cern.ch, juan.cruz@mi.infn.it, marco.rossi5@unimi.it
url = https://github.com/N3PDF/pdfflow
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir=
    =src
packages=find:
zip_safe = False
python_requires = >=3.6
install_requires =
    numpy >= 1.21
    pyyaml
    lhapdf_management

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    quake = quake.scripts.quake:main

[options.extras_require]
capi = ciffi
docs =
    sphinx_rtd_theme
    recommonmark
    sphinxcontrib-bibtex
examples =
    matplotlib
    vegasflow
tf = tensorflow
tf-cpu = tensorflow-cpu
tf-gpu = tensorflow-gpu
tf-arm = tensorflow-rocm